Couple of tweaks to methods/docs