@@ -15,7 +15,7 @@ public class ValidatorTest {
 
     @Test
     public void testValuesArePresentInMapsMissingKeys() {
-        String failureReason = Validate.that().valuesArePresentInMaps(Arrays.asList(Map.of("keyv1", "v1", "k4", "v4")), actualMaps, Validate.Method.EQUALS)
+        String failureReason = Validate.that().valuesArePresentInMaps(List.of(Map.of("keyv1", "v1", "k4", "v4")), actualMaps, Validate.Method.EQUALS)
                 .assertFail().getReason();
         Assert.assertTrue(failureReason.contains("keyv1=v1") && failureReason.contains("k4=v4"));
     }
@@ -23,28 +23,28 @@ public class ValidatorTest {
     @Test
     public void testValuesArePresentInMapsExtraKey() {
         Map<String, String> map = Map.of("k1", "v1", "k2", "v2", "k3", "v3", "k4", "v4", "key5", "v5");
-        Assert.assertTrue(Validate.that().valuesArePresentInMaps(Arrays.asList(map),
-                actualMaps, Validate.Method.EQUALS).assertFail().getReason().endsWith("[" + map.toString() + "]"));
+        Assert.assertTrue(Validate.that().valuesArePresentInMaps(List.of(map),
+                actualMaps, Validate.Method.EQUALS).assertFail().getReason().endsWith("[" + map + "]"));
     }
 
     @Test
     public void testValuesArePresentInMapsUnmatchedValue() {
         Map<String, String> map = Map.of("key1", "v2", "key2", "v2", "key3", "k3noMatch");
-        Assert.assertTrue(Validate.that().valuesArePresentInMaps(Arrays.asList(map),
-                actualMaps, Validate.Method.EQUALS).assertFail().getReason().endsWith("[" + map.toString() + "]"));
+        Assert.assertTrue(Validate.that().valuesArePresentInMaps(List.of(map),
+                actualMaps, Validate.Method.EQUALS).assertFail().getReason().endsWith("[" + map + "]"));
     }
 
     @Test
     public void testValuesArePresentInMapsMatchingValuesEquals() {
-        Validate.that().valuesArePresentInMaps(Arrays.asList(Map.of("k1", "v1", "k4", "v4")),
+        Validate.that().valuesArePresentInMaps(List.of(Map.of("k1", "v1", "k4", "v4")),
                 actualMaps, Validate.Method.EQUALS).assertPass();
     }
 
     @Test
     public void testValuesArePresentInMapsMatchingValuesContains() {
-        Validate.that().valuesArePresentInMaps(Arrays.asList(Map.of("k1", "v", "k4", "v")),
+        Validate.that().valuesArePresentInMaps(List.of(Map.of("k1", "v", "k4", "v")),
                 actualMaps, Validate.Method.CONTAINS).assertPass();
-        Validate.that().valuesArePresentInMaps(Arrays.asList(Map.of("k1", "a", "k4", "b")),
+        Validate.that().valuesArePresentInMaps(List.of(Map.of("k1", "a", "k4", "b")),
                 actualMaps, Validate.Method.CONTAINS).assertFail();
     }
 
